--- a/css/item.css
+++ b/css/item.css
@@ -332,3 +332,128 @@ body {
     text-align: center;
 }
 
+/* Main */
+main {
+    margin: 20px 100px;
+}
+
+.item {
+    height: 550px;
+    font-size: 18px;
+}
+
+.item__container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+}
+
+.item__img {
+    width: 60%;
+    height: 100%;
+    padding: 10px;
+}
+
+.item__img--large {
+    width: 100%;
+    height: 70%;
+}
+
+.item__img--large img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.item__img--small {
+    width: 100%;
+    height: 30%;
+    display: flex;
+}
+
+.item__img--smaller {
+    width: 25%;
+    height: 100%;
+    padding: 20px 10px 10px 10px;
+}
+
+.item__img--small img {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    object-fit: cover;
+}
+
+.item__img--smaller img:hover {
+    border: 1px solid red;
+}
+
+.item__content {
+    width: 40%;
+    height: 100%;
+    padding: 20px;
+}
+
+.item__info {
+    height: 30%;
+    width: 100%;
+    border-bottom: 1px solid gray;
+}
+
+.item__info > p {
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.item__info .title {
+    padding-bottom: 10px;
+}
+
+.item__info .price {
+    font-size: 20px;
+    color: red;
+    padding-bottom: 10px;
+}
+
+.item__desc {
+    height: 20%;
+    font-size: 26px;
+}
+
+.item__desc > ul > li{
+    display: flex;
+    padding-top: 10px;
+    font-size: 18px;
+}
+
+.item__desc > ul > li > p:first-child {
+    font-weight: bold;
+    padding-right: 10px;
+}
+
+.item__content > button {
+    color: #fff;
+    font-size: 20px;
+    padding: 15px 40px;
+    background-color: tomato;
+    border: 1px solid gray;
+    cursor: pointer;
+    outline: none;
+}
+
+.item__content > button:hover {
+    background-color: red;
+    border: 1px solid #fff;
+}
+
+.buttons_added {
+    padding-top: 20px;
+    height: 20%;
+}
+
+.buttons_added > input {
+    font-size: 20px;
+    padding: 5px;
+    margin-left: 10px;
+}
