--- a/css/product.css
+++ b/css/product.css
@@ -332,3 +332,30 @@ body {
     text-align: center;
 }
 
+/* Main */
+main {
+    margin: 20px 100px;
+}
+
+main .wrapper {
+    height: auto;
+    height: 800px;
+}
+
+.product__detail {
+    flex-wrap: wrap;
+}
+
+.product__title {
+    background-color: #F2F2F2;
+    border-bottom: 2px solid #AEB404;
+    display: block;
+}
+
+.product__title > p {
+    text-align: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 300;
+}
